--- a/Publisher.Data/Publisher.Data.csproj
+++ b/Publisher.Data/Publisher.Data.csproj
@@ -9,7 +9,10 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.6" />
-    <PackageReference Include="Scalar.AspNetCore" Version="2.4.16" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Publisher.Domain\Publisher.Domain.csproj" />
   </ItemGroup>
 
 </Project>
