--- a/Publisher.Api_Program/Publisher.Api_Program.csproj
+++ b/Publisher.Api_Program/Publisher.Api_Program.csproj
@@ -18,11 +18,13 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="PlantUml.Net" Version="1.4.80" />
     <PackageReference Include="Scalar.AspNetCore" Version="2.4.16" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Publisher.Data\Publisher.Data.csproj" />
+    <ProjectReference Include="..\Publisher.Domain\Publisher.Domain.csproj" />
   </ItemGroup>
 
 </Project>
